--- a/js/package.json
+++ b/js/package.json
@@ -18,6 +18,9 @@
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.25.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
