--- a/js/package.json
+++ b/js/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
